--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link active" href="#Books">Books <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#Books">Books <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="#Courses">Courses</a>
                     <a class="nav-item nav-link" href="#Others">Others</a>
                     <a class="nav-item nav-link" href="#Blog">Blog</a>
